samples/_failures_safe/1761479112_26bc7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a14cb0ba.c: In function ‘main’:
./samples/SAFE/__tmp_a14cb0ba.c:185:12: error: missing terminating " character
  185 |     printf("Enter expression to
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a14cb0ba.c:185:5: error: expected expression at end of input
  185 |     printf("Enter expression to
      |     ^~~~~~
./samples/SAFE/__tmp_a14cb0ba.c:185:5: error: expected declaration or statement at end of input
